--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </li>
             </ul>
         </nav>
-    <header>
+    </header>
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
