--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="hero"> </div>
 
-    <div class="content">
+    <main>
         <div id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Optimization book on desk" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -49,7 +49,8 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </main>
+    
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
