--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
+        </section>
         <section class="services" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Reputation Management infographic on computer" class="float-right" />
             <h2>Online Reputation Management</h2>
